# KeyShard

./: API.md  Cargo.toml  IMPLEMENTATION.md  LICENSE.txt  README.md  fluence.yaml  logs.txt  provider.yaml
.fluence/: docker-compose.yaml  provider-artifacts.yaml  provider-secrets.yaml  workers.yaml
.fluence/aqua/: deals.aqua  services.aqua
.fluence/configs/: nox-0_Config.toml  nox-1_Config.toml  nox-2_Config.toml
src/aqua/: main.aqua
src/frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/frontend/src/: App.tsx  index.css  index.ts  main.tsx  relays.json
src/frontend/src/components/ui/: input.tsx  spinner.tsx
src/frontend/src/lib/: endpoint.ts
src/frontend/src/pages/: demo.tsx  home.tsx  pages.module.css
src/gateway/: README.md  package-lock.json  package.json  tsconfig.json  vercel.json
src/gateway/api/: serverless.ts
src/gateway/src/: dev.ts
src/gateway/src/app/: index.ts
src/gateway/src/compiled-aqua/: main.ts
src/services/myService/: service.yaml
src/services/myService/myService/: Cargo.toml  module.yaml
src/services/myService/myService/src/: main.rs
src/testScript/: logs.txt  package-lock.json  package.json
src/testScript/src/: index.ts
