[package]
name = "myService"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "myService"
path = "src/main.rs"

[dependencies]
ark-bls12-381 = "0.4.0"
ark-ff = "0.4.2"
bincode = "1.3.3"
blake2 = "0.10.6"
marine-rs-sdk = "0.14.0"
rand = "0.8.5"
secret_sharing_and_dkg = "0.11.0"

[dev-dependencies]
marine-rs-sdk-test = "0.16.1"
